testsite/css/masterefsaestyle.css
/* ... */
.wrapper-dropdown-2{
    margin-right: 75px;
    position: relative;
    outline: none;
    cursor: pointer;
}
.menu-accent-bottom {
    position: relative;
    opacity: 1;
    width: 100%;
    left: 0px;
    top: 48px;
    height: 3px;
    background-color: rgb(163, 35, 0);
    z-index: 94;
}
.button-more {
    visibility: hidden;
    position: absolute;
    top: 12px;
    left: 177px;
    width: 100px;
}
@media (max-width: 800px) {
.button-more {
    visibility: visible;
}
.menu-mid {
    position: absolute;
    left:50%;
    margin-left: -132px;
    top: 1px;
    height: 49px;
    width: 264px;
    text-align: center;
    }
    .button-3 {
        visibility: hidden;
    }
    .button-4{
       visibility: hidden; 
    }
    .button-5{
        visibility: hidden; 
    }
    .button-more {
        visibility: visible;
    }
    .menu-accent-hiding{
        visibility: hidden;
    }
}
@media only screen and (max-width: 640px) {
.form {
    margin-top: 35px;
    margin-left: 0px;
    position: absolute;
    left: 50%;
    top: 70px;
    z-index:1003;
    -moz-transform: translate3d(-50%, 0, 0);
    -ms-transform: translate3d(-50%, 0, 0);
    -webkit-transform: translate3d(-50%, 0, 0);
    transform: translate3d(-50%, 0, 0);
    width: 75%;
    padding: 20px;
    overflow: hidden;
    background-color: black;
    border: 1px solid rgba(255, 255, 255, 0.5);
    -moz-border-radius: 12px;
    -webkit-border-radius: 12px;
    border-radius: 12px;
    }
}
/*possible duplicate*/
/*@media only screen and (min-width: 485px) {
    .nav-buttons > .passive:hover{
        color: #999;
    }
    .nav-buttons > .active:hover{
        color: #999;
    }
    .nav-buttons:hover:before{
        width: 100%;
    }
    .nav-buttons-more > .passive:hover{
        color: #999;
    }
    .nav-buttons-more > .active:hover{
        color: #999;
    }
    .nav-buttons-more:hover:before{
        width: 72%;
    }
}*/
.wrapper-dropdown-2, .wrapper-dropdown-3, .wrapper-dropdown-1, .wrapper-dropdown-4, .wrapper-dropdown-5, .wrapper-dropdown-6 {
    position: relative;
    outline: none;
    cursor: pointer;
    width:100%;
}
.wrapper-dropdown-1 .dropdown, .wrapper-dropdown-3 .dropdown, .wrapper-dropdown-4 .dropdown, .wrapper-dropdown-2 .dropdown, .wrapper-dropdown-5 .dropdown {
    width:100%;
    position: absolute;
    padding-left: 10%;
    padding-right: 10%;
    -webkit-transition: all 0.5s ease-out;
    -moz-transition: all 0.5s ease-out;
    -ms-transition: all 0.5s ease-out;
    -o-transition: all 0.5s ease-out;
    transition: all 0.5s ease-out;
    list-style: none;
    z-index:999;
    background-color: #000;
    -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.47);
    -moz-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.47);
    -o-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.47);
    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.47);
    max-height: 0;
    overflow: hidden;
}
.wrapper-dropdown .dropdown li {
    position: relative;
}
.wrapper-dropdown-1 .dropdown li, .wrapper-dropdown-2 .dropdown li, .wrapper-dropdown-3 .dropdown li, .wrapper-dropdown-4 .dropdown li, .wrapper-dropdown-5 .dropdown li, .wrapper-dropdown-6 .dropdown li {
    border-bottom: 1px solid #F0F0F0;
    float: none;
    margin: 0;
    width: 100%;
    text-align: left;
}
.wrapper-dropdown-1 .dropdown li, .wrapper-dropdown-3 .dropdown li, .wrapper-dropdown-4 .dropdown li, .wrapper-dropdown-2 .dropdown li, .wrapper-dropdown-5 .dropdown li, .wrapper-dropdown-6 .dropdown li {
    padding:8px;
    font-size: 22px;
}
.wrapper-dropdown-1 .dropdown li:hover, .wrapper-dropdown-2 .dropdown li:hover, .wrapper-dropdown-3 .dropdown li:hover, .wrapper-dropdown-4 .dropdown li:hover, .wrapper-dropdown-5 .dropdown li:hover, .wrapper-dropdown-6 .dropdown li:hover {
    background:#FDFDFD;
}
.wrapper-dropdown-1 .dropdown li:last-child, .wrapper-dropdown-3 .dropdown li:last-child, .wrapper-dropdown-2 .dropdown li:last-child, .wrapper-dropdown-4 .dropdown li:last-child, .wrapper-dropdown-5 .dropdown li:last-child, .wrapper-dropdown-6 .dropdown li:last-child {
    border-bottom:none;
}
.wrapper-dropdown-1 .dropdown li a, .wrapper-dropdown-2 .dropdown li a, .wrapper-dropdown-3 .dropdown li a, .wrapper-dropdown-4 .dropdown li a, .wrapper-dropdown-5 .dropdown li a, .wrapper-dropdown-6 .dropdown li a {
    display: block;
    text-decoration: none;
    color:#666;
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -ms-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
    border-radius: 0;
    border: none;
}
.wrapper-dropdown-1 .dropdown li a:hover, .wrapper-dropdown-2 .dropdown li a:hover, .wrapper-dropdown-3 .dropdown li a:hover, .wrapper-dropdown-4 .dropdown li a:hover, .wrapper-dropdown-5 .dropdown li a:hover {
    color:#a32300;
}
/* Active state */
 .wrapper-dropdown-1.active:after, .wrapper-dropdown-2.active:after, .wrapper-dropdown-3.active:after, .wrapper-dropdown-4.active:after, .wrapper-dropdown-5.active:after {
    border-width: 0 6px 6px 6px;
}
.wrapper-dropdown-1.active .dropdown, .wrapper-dropdown-2.active .dropdown, .wrapper-dropdown-3.active .dropdown, .wrapper-dropdown-4.active .dropdown, .wrapper-dropdown-5.active .dropdown {
    max-height: 400px;
}

/*search function*/
.search {
    background: #a32300;
    border-radius: 5px;
}
.search input[type="search"] {
    border: none;
    outline: none;
    padding: 5px 0px 5px 12px;
    font-size: 14px;
    color: #fff;
    background: none;
    width: 82%;
}
.search form input[type="submit"] {
    background: url(../images/search.png) no-repeat 8px 9px;
    width: 33px;
    height: 32px;
    border: none;
    margin: 0 0 0 -4px;
    padding:0;
    border:none;
    outline:none;
}
.cd-main-header {
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -o-transform: translateZ(0);
  transform: translateZ(0);
  will-change: transform;
}
/* ... */

